--- a/templates/compte/show.html.twig
+++ b/templates/compte/show.html.twig
@@ -13,7 +13,7 @@
             </tr>
             <tr>
                 <th>Id_photo</th>
-                <td>{{ compte.idPhoto }}</td>
+                <td>{{ compte.photo_id }}</td>
             </tr>
             <tr>
                 <th>Id_etablissement</th>
