--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,16 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+        
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1>404</h1>
+                    <p>Page not found</p>
+                </div>
+            </div>
+
+        {% endblock %}
     </body>
 </html>
