--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,18 +14,33 @@
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputUsername">Username</label>
-    <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    <div class="container d-flex flex-column  w-full">
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+        <h1 class="h3 font-weight-normal">Connectez-vous à retarrosoir</h1>
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
+        <form>
+
+            <div class="mb-3">
+                <label for="inputUsername" class="form-label">Nom d'utilisateur : </label>
+                <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
+            </div>
+            
+            <div class="mb-3">
+                <label for="inputEmail" class="form-label">Mot de Passe : </label>
+                <input type="password" name="password" id="inputEmail" class="form-control" autocomplete="password" required>
+            </div>
+            <input type="hidden" name="_csrf_token"
+                value="{{ csrf_token('authenticate') }}"
+            >
+
+            <button class="btn btn-dark" type="submit">
+                Se Connecter
+            </button>
+
+        </form>
+
+        <span>Vous n'avez pas encore de compte ? <a href="{{ path('app_compte_new') }}">Inscrivez-vous</a></span>
+
+    </div>
 </form>
 {% endblock %}
