--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         {% block stylesheets %}
         {% endblock %}
 
@@ -11,16 +13,16 @@
         {% endblock %}
     </head>
     <body>
+
+        <header class="">
+
+            {# <a href="{{ path('app_compte_show', {'id': compte.id}) }}" class="btn btn-dark">Mon compte</a> #}
+
+        </header>
+
         {% block body %}
-        
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h1>404</h1>
-                    <p>Page not found</p>
-                </div>
-            </div>
 
         {% endblock %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
