4 - 6 : Suppression et modification d'un compte

--- a/templates/compte/edit.html.twig
+++ b/templates/compte/edit.html.twig
@@ -3,11 +3,21 @@
 {% block title %}Edit Compte{% endblock %}
 
 {% block body %}
-    <h1>Edit Compte</h1>
 
-    {{ include('compte/_form.html.twig', {'button_label': 'Update'}) }}
+    <div class="container">
 
-    <a href="{{ path('app_compte_index') }}">back to list</a>
+        <h1>Modifier le Compte</h1>
+    
+        {{ include('compte/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-    {{ include('compte/_delete_form.html.twig') }}
+        <div class="d-flex gap-6 mt-3">
+        
+            <a class="btn btn-secondary" href="{{ path('app_compte_show', {id: compte.id}) }}">Retour</a>
+
+            {{ include('compte/_delete_form.html.twig') }}
+
+        </div>
+
+    </div>
+
 {% endblock %}
