--- a/templates/compte/new.html.twig
+++ b/templates/compte/new.html.twig
@@ -5,8 +5,10 @@
 {% block body %}
 
     <div class="container">
-        <h1>Inscrivez-vous à retarrosoir</h1>
-        {{ include('compte/_form.html.twig') }}
+        <div class="card w-50 p-5 mx-auto my-5">
+            <h1>Inscrivez-vous à retarrosoir</h1>
+            {{ include('compte/_form.html.twig') }}
+        </div>
     </div>
 
 {% endblock %}
