--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,7 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
         {% block stylesheets %}
         {% endblock %}
 
@@ -14,9 +15,12 @@
     </head>
     <body>
 
-        <header class="">
+        <header class="w-full d-flex justify-content-end p-4" style="background-color: #424B54">
 
-            {# <a href="{{ path('app_compte_show', {'id': compte.id}) }}" class="btn btn-dark">Mon compte</a> #}
+        {% if app.user %}
+            <a href="{{ path('app_compte_show', {'id': app.user.id}) }}" class="btn btn-dark me-3">Mon compte</a>
+            <a href="{{ path('app_logout') }}" class="btn btn-danger">Se déconnecter</a>
+        {% endif %}
 
         </header>
 
