--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -17,4 +17,10 @@
         <li>Your template at <code><a href="{{ '/home/tetetoto/Ecole/BTS/retarrosoir/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
     </ul>
 </div>
+
+
+<div class="add-post">
+    <h2>Ajouter un post</h2>
+    <a href="{{ path('app_post_new') }}" class="btn btn-primary">Ajouter un post</a>
+</div>
 {% endblock %}
