--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}retarrosoir{% endblock %}
+{% block title %}Retarrosoir{% endblock %}
 
 {% block body %}
 {% endblock %}
