16 : Signalement d'un compte

--- a/templates/compte/abonnements.html.twig
+++ b/templates/compte/abonnements.html.twig
@@ -4,8 +4,13 @@
 
 {% block body %}
 
-    {% for elem in abonnements %}
-        <p>{{ elem.username }}</p>
+    {% for abonnement in abonnements %}
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">{{ abonnement.getSuiviPersonneId().getUsername() }}</h5>
+                <a href="{{ path('app_compte_show', {'id': abonnement.getSuiviPersonneId().getId()}) }}" class="btn btn-primary">Voir</a>
+            </div>
+        </div>
     {% endfor %}
 
 {% endblock %}
