--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,11 +7,16 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src ="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/themes/base/jquery-ui.min.css">
+
         {% block stylesheets %}
         {% endblock %}
 
         {% block javascripts %}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
+
         {% endblock %}
     </head>
     <body>
@@ -26,9 +31,9 @@
 
                 <form class="w-25" action="{{ path('app_search') }}">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Rechercher..." aria-label="Rechercher..." name="search">
-                        <button class="btn btn-outline-secondary" type="submit" id="search"><i class="fa-solid fa-magnifying-glass"></i></button>
-                        <button class="btn btn-outline-danger" type="button" id="clear-input"><i class="fa-solid fa-xmark"></i></button>
+                        <input type="text" class="form-control" placeholder="Rechercher..." aria-label="Rechercher..." name="search" id="search-bar">
+                        <button class="btn btn-outline-secondary" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                        <button class="btn btn-outline-danger" type="button" id="clear-input" style="display: none"><i class="fa-solid fa-xmark"></i></button>
                     </div>
                 </form>
 
@@ -45,6 +50,8 @@
         {% block body %}
 
         {% endblock %}
+
+        <script src="{{ asset('app.js') }}"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
