--- a/templates/home/search.html.twig
+++ b/templates/home/search.html.twig
@@ -7,19 +7,38 @@
     <div class='container'>
         <h2 class='text-center'>Résultats de recherche</h2>
 
-        {% for compte in comptes %}
-            <div class='card w-50'>
-                <div class='card-body'>
-                    <h5 class='card-title
-                    {% if compte.getUsername() == 'Retarrosoir' %}
-                        text-danger
-                    {% endif %}
-                    '>{{ compte.getUsername() }}</h5>
-                    <p class='card-text'>{{ compte.getBiographie() }}</p>
-                    <a href='{{ path('app_compte_show', {'id': compte.getId()}) }}' class='btn btn-primary'>Voir le compte</a>
+        <div class="d-flex justify-content-center align-items-center flex-column">
+            {% for compte in comptes %}
+                <div class='card w-50 mt-2'>
+                    <div class='card-body'>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <a href="{{ path('app_compte_show', {'id': compte.getId()}) }}" class="text-decoration-none text-dark">
+                                <div class="d-flex gap-3 align-items-center">
+                                        {% if compte.photo %}
+                                            <img src="data:image/{{ compte.photo.format }};base64,{{ compte.photo.donneesPhoto }}" alt="Photo de profil" width="50px" height="50px" class="rounded-circle border border-dark">
+                                        {% else %}
+                                            <div class="rounded-circle bg-secondary" style="width: 50px; height: 50px;"></div>
+                                        {% endif %}
+                                        <h5 class='card-title
+                                        {% if compte.getUsername() == 'Retarrosoir' %}
+                                            text-danger
+                                        {% endif %}
+                                        '>@{{ compte.getUsername() }}</h5>
+                                </div>
+                            </a>
+
+                            <div>
+                            {% if compte.isSubscribed %}
+                                <a href='{{ path('app_unsubscribe', {'id': compte.getId()}) }}' class='btn btn-sm btn-danger'>Se désabonner</a>
+                            {% else %}
+                                <a href='{{ path('app_subscribe', {'id': compte.getId()}) }}' class='btn btn-sm btn-dark'>S'abonner</a>
+                            {% endif %}
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        {% endfor %}
+            {% endfor %}
+        </div>
 
     </div>
 
