--- a/templates/home/search.html.twig
+++ b/templates/home/search.html.twig
@@ -7,9 +7,12 @@
     <div class='container'>
         <h2 class='text-center'>Résultats de recherche</h2>
 
-        <div class="d-flex justify-content-center align-items-center flex-column">
+        <div class="w-50 d-flex justify-content-center align-items-center flex-column m-auto">
+            {% if comptes is not empty %}
+                <h2 class="w-100 mt-2">Comptes :</h2>
+            {% endif %}
             {% for compte in comptes %}
-                <div class='card w-50 mt-2'>
+                <div class='card w-100 mt-2'>
                     <div class='card-body'>
                         <div class="d-flex justify-content-between align-items-center">
                             <a href="{{ path('app_compte_show', {'id': compte.getId()}) }}" class="text-decoration-none text-dark">
@@ -28,16 +31,47 @@
                             </a>
 
                             <div>
-                            {% if compte.isSubscribed %}
-                                <a href='{{ path('app_unsubscribe', {'id': compte.getId()}) }}' class='btn btn-sm btn-danger'>Se désabonner</a>
-                            {% else %}
-                                <a href='{{ path('app_subscribe', {'id': compte.getId()}) }}' class='btn btn-sm btn-dark'>S'abonner</a>
+                            {% if compte.id != app.user.id %}
+                                {% if compte.isSubscribed %}
+                                    <a href='{{ path('app_unsubscribe', {'id': compte.getId()}) }}' class='btn btn-sm btn-danger'>Se désabonner</a>
+                                {% else %}
+                                    <a href='{{ path('app_subscribe', {'id': compte.getId()}) }}' class='btn btn-sm btn-dark'>S'abonner</a>
+                                {% endif %}
                             {% endif %}
                             </div>
                         </div>
                     </div>
                 </div>
             {% endfor %}
+        </div>
+
+        <div class="w-50 d-flex justify-content-center align-items-center flex-column m-auto">
+        {% if etablissements is not empty %}
+            <h2 class="w-100 mt-2">Etablissements : </h2>
+        {% endif %}
+        {% for etablissement in etablissements %}
+            <div class='card w-100 mt-2'>
+                    <div class='card-body'>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <a href="{{ path('app_etablissement_show', {'id': etablissement.getId()}) }}" class="text-decoration-none text-dark">
+                                <div class="d-flex gap-3 align-items-center">
+                                    {% if etablissement.photoId %}
+                                        <img src="data:image/{{ etablissement.photoId.getFormatId().getNom() }};base64,{{ etablissement.getPhotoId().getDonneesPhoto() }}" alt="Photo de profil" width="50px" height="50px" class="rounded-circle border border-dark">
+                                    {% else %}
+                                        <div class="rounded-circle bg-secondary" style="width: 50px; height: 50px;"></div>
+                                    {% endif %}
+                                    <h5 class='card-title
+                                    {% if etablissement.getNom() == 'Retarrosoir' %}
+                                        text-danger
+                                    {% endif %}
+                                    '>@{{ etablissement.getNom() }}</h5>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+        {% endfor %}
+
         </div>
 
     </div>
