15 : Update du formulaire de demande de création d'un établissement

--- a/templates/compte/edit.html.twig
+++ b/templates/compte/edit.html.twig
@@ -12,7 +12,7 @@
 
         <div class="d-flex gap-6 mt-3">
         
-            <a class="btn btn-secondary" href="{{ path('app_compte_show', {id: compte.id}) }}">Retour</a>
+            <a class="btn btn-secondary me-3" href="{{ path('app_compte_show', {id: compte.id}) }}">Retour</a>
 
             {{ include('compte/_delete_form.html.twig') }}
 
