--- a/templates/etablissement/show.html.twig
+++ b/templates/etablissement/show.html.twig
@@ -3,32 +3,81 @@
 {% block title %}Etablissement{% endblock %}
 
 {% block body %}
-    <h1>Etablissement</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ etablissement.id }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ etablissement.nom }}</td>
-            </tr>
-            <tr>
-                <th>Code_postal</th>
-                <td>{{ etablissement.codePostal }}</td>
-            </tr>
-            <tr>
-                <th>Pays</th>
-                <td>{{ etablissement.pays }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="container mt-5">
 
-    <a href="{{ path('app_etablissement_index') }}">back to list</a>
+        <div class="w-full d-flex items-center justify-center gap-5">
 
-    <a href="{{ path('app_etablissement_edit', {'id': etablissement.id}) }}">edit</a>
+            <div style="width: 200px; height: 200px">
 
-    {{ include('etablissement/_delete_form.html.twig') }}
+                {% if donneesPhoto %}
+                    <img src="data:image/{{ format }};base64,{{ donneesPhoto }}" alt="Photo de profil" width="200" height="200" class="rounded-circle border border-dark">
+                {% else %}
+                    <div class="rounded-circle bg-secondary" style="width: 200px; height: 200px;"></div>
+                {% endif %}
+
+            </div>
+
+            <div class="flex items-center justify-center w-75">
+                <h2>{{ etablissement.nom }}</h2>
+                
+                <div class="d-flex justify-between items-center w-full">
+                    <div>
+                        <h5 class="font-weight-light">{{ etablissement.codePostal }} {{ etablissement.pays }}</h5>
+                    </div>
+                </div>
+
+                <div class="flex items-center justify-between flex-column">
+
+                    <div class="flex items-center justify-center">
+
+                        {% if abonne %}
+                            <a href="{{ path('app_etablissement_unsubscribe', {'id': etablissement.id}) }}" class="btn btn-sm btn-danger">Se désabonner</a>
+                        {% else %}
+                            <a href="{{ path('app_etablissement_subscribe', {'id': etablissement.id}) }}" class="btn btn-sm btn-primary">S'abonner</a>
+                        {% endif %}
+                        
+                        <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            <i class="fa-solid fa-flag"></i>
+                        </button>
+
+                    </div>
+
+                    <div class="d-flex align-items-center justify-content-between mt-2 w-50">
+                        <a href="" class="text-decoration-none"><span class="text-dark">{{ nbAbonnes }} Abonnés</span></a>
+                        <span class="font-bold">|</span>
+                        <a href="{{ path('app_etablissement_associes', {'id': etablissement.id}) }}" class="text-decoration-none"><span class="text-dark">{{ nbCompteAssocie }} Comptes Associés</span></a>
+                    </div>
+
+                </div>
+
+                {# <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Signaler le compte</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <form action="{{ path('app_compte_signaler', {'id': compte.id}) }}">
+                        <div class="modal-body">
+                                <div class="mb-3">
+                                    <label for="exampleFormControlInput1" class="form-label">Raison du Signalement</label>
+                                    <textarea name="reportArea" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Écrivez ici..."></textarea>
+                                </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+                            <button type="submit" class="btn btn-danger">Signaler</button>
+                        </div>
+                    </form>
+                    </div>
+                </div>
+                </div> #}
+
+            </div>
+        </div>
+
+    </div>
+
 {% endblock %}
