--- a/templates/compte/show.html.twig
+++ b/templates/compte/show.html.twig
@@ -9,8 +9,8 @@
 
             <div style="width: 200px; height: 200px">
 
-                {% if donneesPhoto %}
-                    <img src="data:image/{{ format }};base64,{{ donneesPhoto }}" alt="Photo de profil" width="200" height="200" class="rounded-circle border border-dark">
+                {% if donneesPhotoProfil %}
+                    <img src="data:image/{{ formatPhotoProfil }};base64,{{ donneesPhotoProfil }}" alt="Photo de profil" width="200" height="200" class="rounded-circle border border-dark">
                 {% else %}
                     <div class="rounded-circle bg-secondary" style="width: 200px; height: 200px;"></div>
                 {% endif %}
@@ -101,25 +101,51 @@
 
         <hr>
 
-        <h3 class="text-center">Publications</h3>
+        <h3 class="text-center mb-3">Publications</h3>
 
-        {# {% if posts is empty %}
+        {% if posts is empty %}
             <div class="d-flex justify-center items-center">
                 <h4 class="text-center">Aucune publication</h4>
             </div>
         {% else %}
-            <div class="d-flex justify-center items-center gap-5 flex-wrap">
+            <div class="d-flex justify-content-center align-items-center gap-5 flex-column">
                 {% for p in posts %}
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: 35rem;">
+                        <div class="card-header d-flex justify-content-end">
+                            <div class="dropdown">
+                                <a class="btn btn-sm" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fa-solid fa-ellipsis-v"></i>
+                                </a>
+
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href=""><i class="fa-solid fa-flag"></i> Signaler</a></li>
+                                    <li><a class="dropdown-item" href="{{ path('app_post_edit', {'id' : p.post.id }) }}"><i class="fa-solid fa-pen-to-square"></i> Modifier</a></li>
+                                    <li>
+                                        <form method="post" action="{{ path('app_post_delete', {'id': p.post.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ p.post.id) }}">
+                                            <button class="btn"><i class="fa-solid fa-trash"></i> Supprimer</button>
+                                        </form>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        {% if p.photos is not empty %}
+                            {% for photo in p.photos %}
+                                <div class="card-body">
+                                    <img src="data:image/{{ photo.format }};base64,{{ photo.donneesPhoto }}" alt="Photo de profil" width="200" height="200" class="ratio ratio-1x1 object-fit-contain">
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+
                         <div class="card-body">
-                            <h5 class="card-title">{{ p.titre }}</h5>
-                            <p class="card-text">{{ p.description }}</p>
-                            <a href="{{ path('app_post_show', {'id': p.id}) }}" class="btn btn-primary">Voir</a>
+                            <h5 class="card-title">{{ p.post.titre }}</h5>
+                            <p class="card-text">{{ p.post.description }}</p>
+                            <a href="{{ path('app_post_show', {'id': p.post.id}) }}" class="btn btn-primary">Voir</a>
                         </div>
                     </div>
                 {% endfor %}
             </div>
-        {% endif %} #}
+        {% endif %}
 
         
     </div>
