--- a/templates/post/new.html.twig
+++ b/templates/post/new.html.twig
@@ -1,11 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Post{% endblock %}
+{% block title %}Nouveau Post{% endblock %}
 
 {% block body %}
-    <h1>Create new Post</h1>
 
-    {{ include('post/_form.html.twig') }}
+    <div class="container">
+        <h1>Créer un Post</h1>
 
-    <a href="{{ path('app_post_index') }}">back to list</a>
+        {{ include('post/_form.html.twig') }}
+
+        <a href="{{ path('app_post_index') }}" class="btn btn-secondary">back to list</a>
+    </div>
 {% endblock %}
