9 - 30 : Like d'une publication et Modification des images sur un post

--- a/templates/post/new.html.twig
+++ b/templates/post/new.html.twig
@@ -9,6 +9,6 @@
 
         {{ include('post/_form.html.twig') }}
 
-        <a href="{{ path('app_post_index') }}" class="btn btn-secondary">back to list</a>
+        <a href="{{ path('app_post_index') }}" class="btn btn-secondary">Retour</a>
     </div>
 {% endblock %}
