--- a/templates/post/_form.html.twig
+++ b/templates/post/_form.html.twig
@@ -1,4 +1,16 @@
 {{ form_start(form) }}
+    <form action="{{ path('app_post_new') }}">
     {{ form_widget(form) }}
-    <button class="btn btn-dark">{{ button_label|default('Créer') }}</button>
+    <div class="d-flex justify-content-between align-items-center gap-5">
+        <div class="mb-3 w-50">
+            <label for="heures_retard" class="form-label">Nombre d'heures de retard</label>
+            <input class="form-control" type="number" name="heures_retard" id="heures_retard" value="0" min="0" max="24">
+        </div>
+        <div class="mb-3 w-50">
+            <label for="minutes_retard" class="form-label">Nombre de minutes de retard</label>
+            <input class="form-control" type="number" name="minutes_retard" id="minutes_retard" value="0" min="0" max="60">
+        </div>
+    </div>
+    <button type='submit' class="btn btn-dark">{{ button_label|default('Créer') }}</button>
+    </form>
 {{ form_end(form) }}
