--- a/templates/post/_form.html.twig
+++ b/templates/post/_form.html.twig
@@ -1,14 +1,27 @@
 {{ form_start(form) }}
     <form action="{{ path('app_post_new') }}">
+
+    <div class="d-flex justify-content-center align-items-center gap-5">
+    {% if app.request.attributes.get('_route') == 'app_post_edit' %}
+        {% for photo in photos %}
+            <div class="card d-flex flex-column justify-content-between align-items-center gap-3 h-100 p-4">
+                <img src="data:image/{{ photo.formatId.nom }};base64,{{ photo.donneesPhoto }}" alt="photo" width="200" class="">
+                <a class="btn btn-danger" href="">Supprimer</a>
+            </div>
+        {% endfor %}
+    {% endif %}
+    </div>
+
     {{ form_widget(form) }}
+
     <div class="d-flex justify-content-between align-items-center gap-5">
         <div class="mb-3 w-50">
             <label for="heures_retard" class="form-label">Nombre d'heures de retard</label>
-            <input class="form-control" type="number" name="heures_retard" id="heures_retard" value="0" min="0" max="24">
+            <input class="form-control" type="number" name="heures_retard" id="heures_retard" value="0" min="0" max="23">
         </div>
         <div class="mb-3 w-50">
             <label for="minutes_retard" class="form-label">Nombre de minutes de retard</label>
-            <input class="form-control" type="number" name="minutes_retard" id="minutes_retard" value="0" min="0" max="60">
+            <input class="form-control" type="number" name="minutes_retard" id="minutes_retard" value="0" min="0" max="59">
         </div>
     </div>
     <button type='submit' class="btn btn-dark">{{ button_label|default('Créer') }}</button>
