--- a/templates/post/edit.html.twig
+++ b/templates/post/edit.html.twig
@@ -1,13 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Post{% endblock %}
+{% block title %}Modifier un Post{% endblock %}
 
 {% block body %}
-    <h1>Edit Post</h1>
+    <div class="container">
+        <h1>Modifier un Post</h1>
 
-    {{ include('post/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_post_index') }}">back to list</a>
-
-    {{ include('post/_delete_form.html.twig') }}
+        {{ include('post/_form.html.twig', {'button_label': 'Modifier'}) }}
+        <a class="btn btn-danger" href="{{ path('app_compte_show', {'id': app.user.id}) }}">Retour</a>
+    </div>
 {% endblock %}
