--- a/templates/compte/show.html.twig
+++ b/templates/compte/show.html.twig
@@ -163,14 +163,27 @@
                                 </div>
 
                                 <div class="d-flex justify-content-center align-items-center">
-                                    <a href="" class="btn"><i class="fa-regular fa-comment"></i></a>
+                                    <span class="btn open-commentaire" data-id="{{ p.post.id }}"><i class="fa-regular fa-comment"></i></span>
                                 </div>
 
                             </div>
 
-                            <div class="">
+                            <div id="commentaires-{{ p.post.id }}" style="display: none">
 
+                                <hr>
+                                
+                                <div class="mb-3">
+                                    <div class="input-group">
+                                        <input name="commentaire" type="text" class="form-control" id="add-input-commentaire-{{ p.post.id }}" placeholder="Écrivez ici...">
+                                        <input type="hidden" name="post_id" value="{{ p.post.id }}">
+                                        <button data-id="{{ p.post.id }}" class="btn btn-primary add-commentaire">Commenter</button>
+                                    </div>
+                                </div>
 
+                                <div id="liste-commentaires-{{ p.post.id }}">
+
+                                </div>
+                                
                             </div>
 
                         </div>
@@ -182,4 +195,53 @@
         
     </div>
 
+{% endblock %}
+
+{% block javascripts %}
+<script>
+$(document).ready(() => {
+    $('.add-commentaire').click(function(e) {
+
+        let id = $(this).data('id'); // Récupère l'id du post à commenter
+        let commentaire = $(`#add-input-commentaire-${id}`).val(); // Récupère le commentaire à ajouter
+    
+        // Envoie une requête AJAX pour ajouter un commentaire
+        $.ajax({
+            url: '/commentaire/new',
+            type: 'POST',
+            data: {
+                id: id,
+                commentaire: commentaire
+            },
+            success: function(response) {
+
+                console.log(response)
+    
+                // Réinitialise le champ de commentaire
+                $(`#add-input-commentaire-${id}`).val('');
+
+                // Met à jour la liste des commentaires
+                let commentaires = JSON.parse(response.commentaires);
+
+                // On vide la div
+                $(`#liste-commentaires-${id}`).empty();
+
+                // On ajoute les commentaires
+                commentaires.forEach(commentaire => {
+                    $(`#liste-commentaires-${id}`).append(`
+                        <div class="d-flex justify-content-between align-items-center">
+                            <p>${commentaire.date}</p>
+                            <p>${commentaire.commentaire}</p>
+                        </div>
+                    `);
+                });
+
+            },
+            error: function(xhr, status, error) {
+                console.error(error); // Gère les erreurs éventuelles
+            }
+        });
+    })
+})
+</script>
 {% endblock %}
